Added Tenant CRUD functionality to API
